@@ -1,49 +1,80 @@
 package org.apache.commons.cli.help;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+
 import java.io.IOException;
 import java.io.StringReader;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.LinkedList;
 import java.util.List;
-import java.util.Queue;
 import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
-public class TextHelpAppendableTestTest7 {
+/**
+ * Tests for {@link TextHelpAppendable} focusing on text formatting and wrapping.
+ */
+// The class name has been corrected from "TestTest7" to "Test7".
+public class TextHelpAppendableTest7 {
 
     private StringBuilder sb;
-
     private TextHelpAppendable underTest;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         sb = new StringBuilder();
         underTest = new TextHelpAppendable(sb);
     }
 
-    @ParameterizedTest
+    @DisplayName("indexOfWrap() should find the position of a break character or the end of the line")
+    @ParameterizedTest(name = "For char = ''{0}'', isBreakChar = {1}")
     @MethodSource("org.apache.commons.cli.help.UtilTest#charArgs")
-    void testindexOfWrapPosWithWhitespace(final Character c, final boolean isWhitespace) {
+    void indexOfWrap_shouldFindBreakPositionOrLineEnd(final Character c, final boolean isBreakChar) {
+        // Arrange
+        // The test string has a variable character at index 5.
         final String text = String.format("Hello%cWorld", c);
-        assertEquals(isWhitespace ? 5 : 6, TextHelpAppendable.indexOfWrap(text, 7, 0));
+        final int wrapWidth = 7;
+        final int startPosition = 0;
+
+        // If 'c' is a break character (like whitespace), the wrap should happen at its position (index 5).
+        // If no break char is found within the line limit (width=7), the method returns
+        // the last valid index within that limit, which is `startPosition + wrapWidth - 1 = 6`.
+        final int expectedPosition = isBreakChar ? 5 : 6;
+
+        // Act
+        final int actualPosition = TextHelpAppendable.indexOfWrap(text, wrapWidth, startPosition);
+
+        // Assert
+        assertEquals(expectedPosition, actualPosition);
     }
 
     @Test
-    void testAppendParagraphFormat() throws IOException {
-        final String[] expected = { " Hello Joe World 309", "" };
-        sb.setLength(0);
-        underTest.appendParagraphFormat("Hello %s World %,d", "Joe", 309);
-        final List<String> actual = IOUtils.readLines(new StringReader(sb.toString()));
-        assertEquals(Arrays.asList(expected), actual);
-        sb.setLength(0);
-        underTest.appendParagraphFormat("");
-        assertEquals(0, sb.length(), "empty string test failed");
+    @DisplayName("appendParagraphFormat() should format text with arguments and append it")
+    void appendParagraphFormat_shouldFormatAndAppendText() throws IOException {
+        // Arrange
+        final String format = "Hello %s World %,d";
+        // The method is expected to append the formatted string followed by a blank line.
+        final List<String> expectedLines = List.of(" Hello Joe World 309", "");
+
+        // Act
+        underTest.appendParagraphFormat(format, "Joe", 309);
+        final List<String> actualLines = IOUtils.readLines(new StringReader(sb.toString()));
+
+        // Assert
+        assertEquals(expectedLines, actualLines);
+    }
+
+    @Test
+    @DisplayName("appendParagraphFormat() should do nothing for an empty format string")
+    void appendParagraphFormat_shouldHandleEmptyString() throws IOException {
+        // Arrange
+        final String emptyFormat = "";
+
+        // Act
+        underTest.appendParagraphFormat(emptyFormat);
+
+        // Assert
+        assertEquals(0, sb.length(), "Appending an empty paragraph should not write any output.");
     }
 }
